--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,10 @@ twitter_username: kukuhheru
 github_username:  kukuhheru
 
 # Build settings
-theme: jekyll-theme-hacker
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
