--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,9 @@ twitter_username: kukuhheru
 github_username:  kukuhheru
 
 # Build settings
-remote_theme: pages-themes/hacker@v0.2.0
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
