--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: kukuhheru
 github_username:  kukuhheru
 
 # Build settings
-remote_theme: pages-themes/hacker@v0.2.0
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
